--- a/login.html
+++ b/login.html
@@ -55,25 +55,26 @@
         <div class="login__formBox">
           <form>
             <h2>登入</h2>
-            <input type="text" placeholder="你的帳戶名稱" />
-            <input type="password" placeholder="你的密碼" />
-            <input type="submit" value="登入" />
+            <input id="loginUsername"type="username" placeholder="你的帳戶名稱" />
+            <input id="loginPassword" type="password" placeholder="你的密碼" autocomplete="current-password"/>
+            <input id="loginSubmit"type="submit" value="登入" />
             <p class="login__signUp">沒有帳戶?<a id="hiddenLogin">現在註冊</a></p>
           </form>
         </div>
       </div>
     </section>
-    <!-- <section class="signup">
+    <section class="signup">
       <div class="signup__signBox">
         <div class="signup__formBox">
           <form>
             <h2>註冊</h2>
-            <input type="text" placeholder="創建新的帳戶名稱" />
-            <input type="email" placeholder="你的信箱" />
-            <input type="password" placeholder="創新新的密碼" />
-            <input type="password" placeholder="再確認新密碼" />
-            <input type="submit" value="註冊" />
-            <p class="signup__login">已經有帳戶了?<a href="#">現在登入</a></p>
+            <input id="signUsername"type="username" placeholder="創建新的帳戶名稱" required/>
+            <input id="signEmail"type="email" placeholder="你的信箱" required/>
+            <input id="signPassword"type="password" placeholder="創新新的密碼" autocomplete="new-password"required />
+            <input id="signPasswordRepeat"type="password" placeholder="再確認新密碼"autocomplete="new-password" required/>
+            <input id="signSubmit"type="submit" value="註冊" />
+            <p class="signup__login">已經有帳戶了?<a id="hiddenSignup">現在登入</a></p>
+            <div class="message" id="signMessage"></div>
           </form>
         </div>
         <div class="signup__imgBox">
@@ -84,6 +85,6 @@
                 />
         </div>
       </div>
-    </section> -->
+    </section> 
   </body>
 </html>
