--- a/shopProduct.html
+++ b/shopProduct.html
@@ -57,7 +57,7 @@
         </div>
       </div>
     </div>
-    <div class="shopList__title">其他商品</div>
+    <div class="shopList__title"><i class="fas fa-gift"></i> 其他商品</div>
     <div class="shopList__products"></div>
   </body>
 </html>
