--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
       <nav class="nav">
         <ul class="nav__links">
           <li class="nav__link nav__link--animalArea">
-            <a href="animal-area.html"
-              ><i class="fas fa-hippo"></i><span>動物園區</span></a
+            <a href="map.html"
+              ><i class="fas fa-map-marker-alt"></i><span>前往方式</span></a
             >
           </li>
           <li class="nav__link nav__link--shop">
             <a href="shop.html"
-              ><i class="fas fa-shopping-cart"></i><span>商店</span></a
+              ><i class="fas fa-store"></i><span>商店</span></a
             >
           </li>
           <li class="nav__link nav__link--other">
-            <a href="other.html"
-              ><i class="fas fa-info-circle"></i><span>其他</span></a
+            <a href="shopCart.html"
+              ><i class="fas fa-shopping-cart"></i><span>購物車</span></a
             >
           </li>
           <li class="nav__link nav__link--login">
