--- a/shopCart.html
+++ b/shopCart.html
@@ -22,9 +22,9 @@
     <nav class="N-nav">
       <ul class="N-nav__links">
         <li class="N-nav__link">
-          <a href="animal-area.html"
-            ><i class="fas fa-hippo"></i><span>動物園區</span></a
-          >
+          <a href="map.html"
+          ><i class="fas fa-map-marker-alt"></i><span>前往方式</span></a
+        >
         </li>
         <li class="N-nav__link">
           <a href="shop.html"
