--- a/login.html
+++ b/login.html
@@ -21,18 +21,18 @@
       <nav class="N-nav">
         <ul class="N-nav__links">
           <li class="N-nav__link">
-            <a href="animal-area.html"
-              ><i class="fas fa-hippo"></i><span>動物園區</span></a
+            <a href="map.html"
+              ><i class="fas fa-map-marker-alt"></i><span>前往方式</span></a
             >
           </li>
           <li class="N-nav__link">
             <a href="shop.html"
-              ><i class="fas fa-shopping-cart"></i><span>商店</span></a
+              ><i class="fas fa-store"></i><span>商店</span></a
             >
           </li>
           <li class="N-nav__link">
-            <a href="other.html"
-              ><i class="fas fa-info-circle"></i><span>其他</span></a
+            <a href="shopCart.html"
+              ><i class="fas fa-shopping-cart"></i><span>購物車</span></a
             >
           </li>
           <li class="N-nav__link">
