--- a/map.html
+++ b/map.html
@@ -14,7 +14,7 @@
       @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap");
     </style>
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCOxkDMaKO8cV6zTubcvkqkalbbBEkGY6g&libraries=places&callback=initMap"
+      src="https://maps.googleapis.com/maps/api/js?key=&libraries=places&callback=initMap"
       async
       defer
     ></script>
