--- a/index.html
+++ b/index.html
@@ -24,25 +24,20 @@
       <a href="index.html" class="logo"><i class="fas fa-paw">ZOO.</i></a>
       <div class="hamburger"><i class="fas fa-bars"></i></div>
       <nav class="nav">
-        <ul class="nav__links">
-          <li class="nav__link nav__link--animalArea">
+        <ul id="navber" class="nav__links">
+          <li class="nav__link">
             <a href="map.html"
               ><i class="fas fa-map-marker-alt"></i><span>前往方式</span></a
             >
           </li>
-          <li class="nav__link nav__link--shop">
+          <li class="nav__link">
             <a href="shop.html"
               ><i class="fas fa-store"></i><span>商店</span></a
             >
           </li>
-          <li class="nav__link nav__link--other">
+          <li class="nav__link">
             <a href="shopCart.html"
               ><i class="fas fa-shopping-cart"></i><span>購物車</span></a
-            >
-          </li>
-          <li class="nav__link nav__link--login">
-            <a class="nav__link--active" href="login.html"
-              ><i class="fas fa-sign-in-alt"></i><span>登入</span></a
             >
           </li>
         </ul>
