--- a/map.html
+++ b/map.html
@@ -13,9 +13,12 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap");
     </style>
+    <script type="module">
+      import { navberChange } from "./JS/navberModule.js";
+      navberChange();
+    </script>
     <script
       src="https://maps.googleapis.com/maps/api/js?key=&libraries=places&callback=initMap"
-      async
       defer
     ></script>
     <script defer src="./JS/map.js"></script>
@@ -26,7 +29,7 @@
       <a href="index.html" class="N-logo"><i class="fas fa-paw"></i></a>
       <div class="N-hamburger"><i class="fas fa-bars"></i></div>
       <nav class="N-nav">
-        <ul class="N-nav__links">
+        <ul id="navber" class="N-nav__links">
           <li class="N-nav__link">
             <a href="map.html"
               ><i class="fas fa-map-marker-alt"></i><span>前往方式</span></a
@@ -41,11 +44,7 @@
             <a href="shopCart.html"
               ><i class="fas fa-shopping-cart"></i><span>購物車</span></a
             >
-          </li>
-          <li class="N-nav__link">
-            <a href="login.html"
-              ><i class="fas fa-sign-in-alt"></i><span>登入</span></a
-            >
+            <p class="N-nav__openCart openCart--close">0</p>
           </li>
         </ul>
       </nav>
