--- a/map.html
+++ b/map.html
@@ -18,7 +18,7 @@
       navberChange();
     </script>
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=&libraries=places&callback=initMap"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCOxkDMaKO8cV6zTubcvkqkalbbBEkGY6g&libraries=places&callback=initMap"
       defer
     ></script>
     <script defer src="./JS/map.js"></script>
